@@ -3,6 +3,8 @@ cdebconf (0.84) UNRELEASED; urgency=low
   * Fix horrible argv initialisation code in gtk frontend.
   * Add gtk frontend to cdebconf.deb; enable cdebconf-gtk-udeb.
   * Fix some compiler warnings in gtk frontend.
+  * Reap child processes when SIGCHLD is received, otherwise we may hang in
+    read().
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 28 Jul 2005 16:56:57 +0100
 
